--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -174,13 +174,112 @@
             </div>
             <div class="col-md-12" style="padding-bottom: 3em;">
                 <h3>Jazz Music Premiere</h3>
-                <p>New jazz music compositions by Greg Tardy that have been written to share his own story of surviving suicide.</p>
+                <p>Survivors' Suite: Greg Tardy weaves together written word and musical composition to tell a story of hope and redeption using scripture, poetry, survivors' words and compositions for a jazz quartet.</p>
                 <br>
                 <div class="row">
-                    <div class="col-md-3" style="text-align: center;">
+                    <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/team/gregtardy.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Greg Tardy</h5>
                         <span>Composer & Jazz Reedman</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#gregbio">
+                          View Bio
+                        </a>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="gregbio" tabindex="-1" aria-labelledby="gregbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="gregbioLabel">Meet Greg Tardy</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Saxophonist, multi-reedist, and composer Gregory Tardy is one of the most versatile jazz musicians of his generation, equally comfortable in a variety of musical and improvisational situations. Born into a musical family, he began his musical career studying classical clarinet. In his early 20s, while preparing for a symphony career he discovered jazz saxophone and hasn't looked back.</p>
+                            <p>In 1992, he started playing with the legendary drummer, Elvin Jones, and he recorded his first CD, Crazy Love. As a sought after sideman he has played with many prominent jazz artists including: Andrew Hill, Tom Harrell, Dave Douglas, Wynton Marsalis, Jay McShann, Nicholas Payton, Roy Hargrove, Steve Coleman, Betty Carter, Don Byron, Bill Frisell, Rashied Ali, Ellis Marsalis, Brian Lynch, John Patitucci, and many more. He has also performed and/or recorded along with many other notable saxophonists, such as Joe Lovano, Mark Turner, Chris Potter, Dewey Redman, Ravi Coltrane, and others. In more recent years, Tardy has gone full circle, by focusing on his clarinets more, using them on recordings by Tom Harrell, Ohad Talmor/Steve Swallow, Stefan Harris, Chris Potter and Andrew Hill.</p>
+                            <p>His performance schedule has taken him all over the world, playing at all of the major jazz festivals and on some of the biggest stages in jazz. As a sideman, he has been featured on several Downbeat Albums of the Year and also several Grammy nominated recordings; including a Grammy winning CD with Brian Lynch in 2006. He also has recorded fourteen CDs under his own name featuring his unique compositions, blending his love of traditional jazz with a more modern seeking style. His latest project, If Time Could Stand Still, was released in the fall of 2020 on WJ3 Records.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 bfa-artist-card">
+                        <img src="assets/img/rob-linton.jpeg" style="border-radius: 50%; width: 150px;">
+                        <h5 style="padding-top: 10px;">Rob Linton</h5>
+                        <span>Bassist</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#robbio">
+                          View Bio
+                        </a>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="robbio" tabindex="-1" aria-labelledby="robbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="robbioLabel">Meet Rob Linton</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Rob Linton began his journey as a bassist at the age of 18 in his hometown of Charlotte, North Carolina. He earned his undergraduate degree at UNC Charlotte where he studied with Ron Brendle, Will Campbell, and Mike Hackett. He continued on to complete his masters degree at the University of Tennessee at Knoxville where he primarily studied with Jon Hamar, Greg Tardy, and Mark Boling.</p>
+                            <p>After school, Rob focused on performing and has had the opportunity to play with many world-class musicians within different musical genres. These include Eric Reed, Jason Marsalis, Greg Tardy, Abraham Burton, Jazzmeia Horn, Dave Potter and Retro Groove, Cecil Alexander, Taber Gable, Rod McGaha, Darren English, Jonathan Barber, and many others.</p>
+                            <p>Rob is currently located in Nashville, Tennessee where he is the professor of Jazz Bass at Vanderbilt University.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 bfa-artist-card">
+                        <img src="assets/img/dave-potter.jpg" style="border-radius: 50%; width: 150px;">
+                        <h5 style="padding-top: 10px;">Dave Potter</h5>
+                        <span>Drummer</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#davebio">
+                          View Bio
+                        </a>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="davebio" tabindex="-1" aria-labelledby="davebioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="davebioLabel">Meet Dave Potter</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Following his graduation from Florida State, Potter was chosen from a national pool of applicants to be a member of the Louis Armstrong Quintet at the University of New Orleans. Unfortunately, the tragedy of hurricane Katrina temporarily ended his hopes for a career in Louisiana. Soon after, Potter was awarded a full scholarship to The Julliard School in New York City. However, after several days of intense meditation he declined the offer and returned to Florida State University, where he received his master's degree after further collaboration with his mentor Marcus Roberts. The drummer is now based in Atlanta where he maintains a busy teaching and performing schedule while also touring with The Jason Marsalis Vibes Quartet, Greg Tardy, Eric Reed, and Marcus Roberts, as well as his main project as a leader, Retro Groove.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 bfa-artist-card">
+                        <img src="assets/img/taber-gable.jpg" style="border-radius: 50%; width: 150px;">
+                        <h5 style="padding-top: 10px;">Taber Gable</h5>
+                        <span>Pianist</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#taberbio">
+                          View Bio
+                        </a>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="taberbio" tabindex="-1" aria-labelledby="taberbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="taberbioLabel">Meet Taber Gable</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Graduate from The Juilliard School Taber Gable has been called on to perform worldwide alongside many great musicians such as Marcus/ E.J.Strickland, Terrace Martin, Steve Davis, Jonathan Barber, Gregory Tardy, Jimmy Greene, Jonathan Pinson, Braxton Cook, and more! Gable has two albums out "Hidden Driveways" 2020, "Push and Pull" 2025, and is a highly sought after musician on the New York, L.A., and Nashville music scenes as well as internationally known for his cross-genre abilities and captivating live performance style. In Fall of 2024 Taber Gable was appointed Jazz Piano Professor at the University of Tennessee and continues to travel and record internationally.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
