--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -135,7 +135,8 @@
             </div>
             <div class="col-md-12" style="padding-bottom: 3em;">
                 <h3>Classical Music Premiere</h3>
-                <p>Seven Songs for a Dead Son: <i>"The Tim Poems"</i> by Janet Burroway set to music by composer Philip Wharton.</p>
+                <h4 style="font-size: 20px; font-weight: 700;"><i>Seven Songs for a Dead Son</i></h4>
+                <p><i>"The Tim Poems"</i> by Janet Burroway set to music by composer Philip Wharton.</p>
                 <a href="assets/Seven Songs for a Dead Son by Janet Burroway.pdf" target="_blank" class="basic-btn">Read The Tim Poems</a>
                 <br><br>
                 <div style="padding: 1em 2em 0em 2em; border-left: solid 2px #137868">
@@ -174,7 +175,8 @@
             </div>
             <div class="col-md-12" style="padding-bottom: 3em;">
                 <h3>Jazz Music Premiere</h3>
-                <p>Survivors' Suite: Greg Tardy weaves together written word and musical composition to tell a story of hope and redeption using scripture, poetry, survivors' words and compositions for a jazz quartet.</p>
+                <h4 style="font-size: 20px; font-weight: 700;"><i>Survivors' Suite</i></h4>
+                <p>Greg Tardy weaves together written word and musical composition to tell a story of hope and redeption using scripture, poetry, survivors' words and compositions for a jazz quartet.</p>
                 <br>
                 <div class="row">
                     <div class="col-md-3 bfa-artist-card">
