--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -176,7 +176,7 @@
             <div class="col-md-12" style="padding-bottom: 3em;">
                 <h3>Jazz Music Premiere</h3>
                 <h4 style="font-size: 20px; font-weight: 700;"><i>Survivors' Suite</i></h4>
-                <p>Greg Tardy weaves together written word and musical composition to tell a story of hope and redeption using scripture, poetry, survivors' words and compositions for a jazz quartet.</p>
+                <p>Greg Tardy weaves together written word and musical composition to tell a story of hope and redemption using scripture, poetry, survivors' words and compositions for a jazz quartet.</p>
                 <br>
                 <div class="row">
                     <div class="col-md-3 bfa-artist-card">
