--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -151,25 +151,113 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-md-3" style="text-align: center;">
+                    <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/janet-burroway.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Janet Burroway</h5>
                         <span>Author</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#janetbio">
+                          View Bio
+                        </a>
                     </div>
-                    <div class="col-md-3" style="text-align: center;">
+                    <!-- Modal -->
+                    <div class="modal fade" id="janetbio" tabindex="-1" aria-labelledby="janetbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="janetbioLabel">Meet Janet Burroway</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Janet Burroway is an American author. Burroway's published oeuvre includes eight novels, memoirs, short stories, poems, translations, plays, two children's books, and two how-to books about the craft of writing. Her novel The Buzzards was nominated for the 1970 Pulitzer Prize.</p>
+                            <p><strong>Read more about Janet:</strong></p>
+                            <a href="https://janetburroway.com/" target=_blank><i class="bi bi-link-45deg"></i> Website</a>
+                            <br>
+                            <a href="https://en.wikipedia.org/wiki/Janet_Burroway" target=_blank><i class="bi bi-link-45deg"></i> Wikipedia</a>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/team/philipwharton.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Philip Wharton</h5>
                         <span>Composer</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#philipbio">
+                          View Bio
+                        </a>
                     </div>
-                    <div class="col-md-3" style="text-align: center;">
+                    <!-- Modal -->
+                    <div class="modal fade" id="philipbio" tabindex="-1" aria-labelledby="philipbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="philipbioLabel">Meet Philip Wharton</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Few artists enjoy such high praise for both of their disciplines as composer/violinist Philip Wharton. Of his playing, The New York Times proclaimed, "a rousing performance!" and The Waterloo Courier wrote, "a golden tone with breathtaking execution." His compositions, heralded from coast to coast, are described by the New York Concert Review as, "...decidedly contemporary...both engaging and accessible." Writing from symphony to song, past seasons saw the Santa Fe Opera's remounting of Two Saintes Caught in the Same Act as part of their apprentice scenes program, the Grammy-nominated Borealis Wind Quintet perform his Quintet on their concert tours, his chamber symphony, Passing Season performed by regional orchestras, premiere of his Symphony, his tribute to Shakespeare's 450th birthday, a song cycle entitled Fools, and concerts with Grammy-nominated soprano, Caroline Worra. Other projects include collaborations with author Janet Burroway and illustrator John Vernon Lord to create musical settings of their books for children: The Giant Jam Sandwich, The Truck on the Track, and a vocal-monodrama, The Perfect Pig. Recent recordings include Albany Records' release of his Flute Sonata - performed by flutist, Katherine Fink, and pianist Rose Grace, Crescent Phase Records' release of his Woodwind Quintet - performed by the Madera Woodwind Quintet, and Kenneth Thompkins' (principal Detroit Symphony Orchestra) recording of his Alto-Trombone Sonata. Expect to see the release of a CD by Elizabeth Sombart with the Royal Philharmonic Orchestra in the coming year.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/team/belle.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Belle Toh</h5>
                         <span>Pianist</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#bellebio">
+                          View Bio
+                        </a>
                     </div>
-                    <div class="col-md-3" style="text-align: center;">
+                    <!-- Modal -->
+                    <div class="modal fade" id="bellebio" tabindex="-1" aria-labelledby="bellebioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="bellebioLabel">Meet Belle Toh</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>My journey has taken me across continents and cultures, cultivating a rich tapestry of musical mastery and innovative expression. With roots in esteemed institutions, a thirst for out-of-the-box ideas, and over four decades of experience, I've honed my craft - earning accolades and igniting passions along the way.</p>
+                            <p>My experiences range from accompanying world-renowned vocalists and leading chamber ensembles to securing approval from the Chinese government to collaborate with a choir of Miao minority singers in staging Handel's Messiah at the Yunnan Minority Village, delivering a worship concert to an audience of over 3,000. I'm more than just a virtuoso pianist - I'm a multifaceted artist, dancer, and educator, dedicated to empowering others through the transformative power of art.</p>
+                            <p>As the Founder and President of Transformance Art, my life is a testimony to the benefits of art, and I aim to share this with others through a vibrant hub where creative artists can connect and use their talents to uplift and inspire others. I want to see transformance artists build bridges through music and art and create a world where artistic expression will act as a powerful catalyst for personal and societal transformation.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/team/carlahanson.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Carla Hanson</h5>
                         <span>Soprano</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#carlabio">
+                          View Bio
+                        </a>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="carlabio" tabindex="-1" aria-labelledby="carlabioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="carlabioLabel">Meet Belle Toh</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Carla Thelen Hanson has garnered attention for exciting and vocally thrilling performances of opera's leading heroines in leading opera houses throughout the country and abroad including New York City Opera, Seattle Opera, and Santa Fe Opera, to name a few</p>
+                            <p>While she has concentrated most of her singing life to Classical Music pursuits she is no stranger to other genres of music and was seen as Francesca Johnson in Calliope Theatre's production of <i>The Bridges of Madison County</i> and Dreamer in New Media Opera's workshop of <i>Tempest Fugit</i>. Upcoming she will be in Knoxville, TN with Transformance Art and their <i>Meraki Project</i> debuting original works by composer Philip Wharton on the subject of death by suicide.</p>
+                            <p>Ms. Thelen Hanson is Instructor of Voice and Opera at Luther College in Decorah, Iowa and has recorded an album of classical music titled <i>Chanson d'amour</i> with her long time collaborator and friend Ainhoa Urkijo available on Spotify, Google Play, YouTube and Amazon.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
