--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -615,16 +615,33 @@
             </div>
             <div class="col-md-12" style="padding-bottom: 2em;">
                 <h3>Emcee</h3>
-                <p>
-                    Abigail Tardy is so grateful to be emceeing this beautiful event for the evening. She is a junior at University of Tennessee majoring in Journalism & Media, but performance art is where her heart lies. Her own connection to the arts aided her own struggles with a deep depression. She is a singer, actress, dancer, and photographer. She has performed recently as Chava in Fiddler on the Roof (Wordplayers), Claudette/Diane/Charlotte in Walk, Don't Ride! (Wordplayers), Soeur St. Charles in Les Dialogues des Carmelites (UTOT), and the Narrator in The Journey: A Pilgrim's Progress (Gregory Tardy Tentet). She hopes everyone will be touched by the performances and art seen this evening.
-                </p>
                 <br>
                 <div class="row">
-                    <div class="col-md-3" style="text-align: center;">
+                    <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/abigail-tardy.JPG" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Abigail Tardy</h5>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#abigailbio">
+                          View Bio
+                        </a>
                     </div>
                 </div>
+                <!-- Modal -->
+                    <div class="modal fade" id="abigailbio" tabindex="-1" aria-labelledby="abigailbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="abigailbioLabel">Meet Abigail Tardy</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Abigail Tardy is so grateful to be emceeing this beautiful event for the evening. She is a junior at University of Tennessee majoring in Journalism & Media, but performance art is where her heart lies. Her own connection to the arts aided her own struggles with a deep depression. She is a singer, actress, dancer, and photographer. She has performed recently as Chava in Fiddler on the Roof (Wordplayers), Claudette/Diane/Charlotte in Walk, Don't Ride! (Wordplayers), Soeur St. Charles in Les Dialogues des Carmelites (UTOT), and the Narrator in The Journey: A Pilgrim's Progress (Gregory Tardy Tentet). She hopes everyone will be touched by the performances and art seen this evening.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
             </div>
         </div>
         <hr style="border: solid 1px #e6c16f; opacity: 1;">
