--- a/connect.html
+++ b/connect.html
@@ -187,7 +187,10 @@
         <a href="https://www.facebook.com/transformanceart" target="_blank" class="facebook" aria-label="facebook"><i class="bx bxl-facebook" aria-hidden="true"></i></a>
         <a href="https://instagram.com/transformanceart" target="_blank" class="instagram" aria-label="instagram"><i class="bx bxl-instagram" aria-hidden="true"></i></a>
         <a href="https://youtube.com/@TransformanceArt" target="_blank" class="youtube" aria-label="youtube"><i class="bx bxl-youtube" aria-hidden="true"></i></a>
+      <br>
+      <a href="https://app.candid.org/profile/15194356/transformance-art-inc-93-3777934" target="_blank"> <img src="https://widgets.guidestar.org/prod/v1/pdp/transparency-seal/15194356/svg" /> </a>
       </div>
+      <br>
         &copy; Copyright Transformance Art <script>document.write(new Date().getFullYear())</script>. All Rights Reserved. Transformance Art, Inc. is a 501(c)(3) nonprofit recognized by the IRS.<br>
         Tax ID Number: 93-3777934
       </div>
