--- a/index.html
+++ b/index.html
@@ -254,6 +254,8 @@
         <a href="https://www.facebook.com/transformanceart" target="_blank" class="facebook" aria-label="facebook"><i class="bx bxl-facebook" aria-hidden="true"></i></a>
         <a href="https://instagram.com/transformanceart" target="_blank" class="instagram" aria-label="instagram"><i class="bx bxl-instagram" aria-hidden="true"></i></a>
         <a href="https://youtube.com/@TransformanceArt" target="_blank" class="youtube" aria-label="youtube"><i class="bx bxl-youtube" aria-hidden="true"></i></a>
+      </div>
+      <div>
       <br>
       <a href="https://app.candid.org/profile/15194356/transformance-art-inc-93-3777934" target="_blank"> <img src="https://widgets.guidestar.org/prod/v1/pdp/transparency-seal/15194356/svg" /> </a>
       </div>
