--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -168,11 +168,14 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body">
-                            <p>Janet Burroway is an American author. Burroway's published oeuvre includes eight novels, memoirs, short stories, poems, translations, plays, two children's books, and two how-to books about the craft of writing. Her novel The Buzzards was nominated for the 1970 Pulitzer Prize.</p>
-                            <p><strong>Read more about Janet:</strong></p>
-                            <a href="https://janetburroway.com/" target=_blank><i class="bi bi-link-45deg"></i> Website</a>
-                            <br>
-                            <a href="https://en.wikipedia.org/wiki/Janet_Burroway" target=_blank><i class="bi bi-link-45deg"></i> Wikipedia</a>
+                            <p>Janet Burroway grew up in Phoenix, Arizona, did her undergraduate degree at Barnard College, and then went on to Cambridge University (England) as a Marshall scholar, and then to the Yale School of Drama as RCA-NBC Fellow.</p>
+                            <p>At Yale she married Belgian director Walter Eysselinck, in 1963 they moved to Ghent, where he directed for the Flemish National Theatre, and Timothy Alan was born. In 1965 Walter was made director of the Sussex University Arts Center, Janet was a Lecturer in English Studies, and she gave birth to their second son, Tobyn Alexander.</p>
+                            <p>But the marriage did not last. In 1971 Janet returned to the US with the boys, and she taught at the Florida State University for the next thirty years. Alex eventually returned to England, where he raised a family and still has a career as a manager of the London Tube.</p>
+                            <p>Tim never wavered from his ambition to become a soldier. Over the years he was deployed to Sarajevo, the Congo, Sierra Leon and Namibia, where he married and became father of a daughter, Thyra. His Army job was privatized in 1999, and when the US invaded Iraq, he left his family for Baghdad to train Iraqis in humanitarian mine removal. He returned to Namibia in 2004, disillusioned by the war, and most likely suffering from PTSD. He took his own life in 2004.</p>
+                            <p>In the years since that loss, Janet has written many poems and a play about her son, and a memoir, <i>Losing Tim</i>.</p>
+                            <p>She is the author of some twenty books, including novels, children’s books, essays, and poetry. Her craft book Writing Fiction is the most widely used fiction writing text in America. Her ninth novel, Simone in Pieces, will appear in November. She is a Robert O. Lawton Distinguished Professor Emerita from FSU, and in 2014 received a Lifetime Achievement Award in Writing from the Humanities Council of Florida.</p>
+                            <p>In the early 2000s Janet’s three children’s books were set to symphonic music by composer Philip Wharton, and these have been performed throughout the Midwest and in New York City. She has since collaborated with Philip on a variety of Art Songs, including “Seven Songs for a Dead Son.”</p>
+                            <p>Janet married Peter Ruppert, a film scholar, in Tallahassee in 1993, and they “retired backwards,” as they like to say, to the Midwest. Son Alex and his wife have raised two daughters: Holly, a film-maker, and Eleanor, a manager with the LIDL corporation. Tim’s daughter Thyra has just finished an MA in Astrophysics at CUNY and is headed for a PHD. Janet and Peter live in Chicago with a brindle cat named Nutmeg.</p>
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
