--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -144,7 +144,7 @@
                     PTSD. She made the decision from two choices: she could give up or write. She's a writer so she
                     chose to write. In The Tim Poems, I feel a mother's sense of profound loss. Without clinical
                     intent, some hint at the stages of grief and others more explicitly: shock in Roadkill, bargaining
-                    in Monologue, and acceptance in Terra Cotta. The poems never try to answer the question
+                    in Monologue, and acceptance in Timeless. The poems never try to answer the question
                     "why?!" - for even though the question hovers always, there is no answer - just working
                     through loss, carrying on, and even finding humor in the ironies of living."</i></p>
                     <p style="text-align: right;">- Philip Wharton <i>(composer)</i></p>
@@ -267,7 +267,7 @@
             <div class="col-md-12" style="padding-bottom: 3em;">
                 <h3>Jazz Music Premiere</h3>
                 <h4 style="font-size: 20px; font-weight: 700;"><i>Survivors' Suite</i></h4>
-                <p>Greg Tardy weaves together written word and musical composition to tell a story of hope and redemption using scripture, poetry, survivors' words and compositions for a jazz quartet.</p>
+                <p>Greg Tardy weaves together written word and musical composition to tell a story of hope and redemption using scripture, poetry, survivors' words and compositions for a jazz quartet. The jazz quartet will be accompanied by narration by Greg Tardy's daughter, Abigail Tardy.</p>
                 <br>
                 <div class="row">
                     <div class="col-md-3 bfa-artist-card">
@@ -388,7 +388,7 @@
                     <div class="col-12 col-md-6 col-lg bfa-artist-card">
                         <img src="assets/img/mckenzie-duncan.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">McKenzie Duncan</h5>
-                        <span>Dancer / Choreographer</span>
+                        <span>Choreographer</span>
                         <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#mckenziebio">
                           View Bio
                         </a>
@@ -442,7 +442,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg bfa-artist-card">
                         <img src="assets/img/katrina-larson.jpg" style="border-radius: 50%; width: 150px;">
-                        <h5 style="padding-top: 10px;">Katrina Larson</h5>
+                        <h5 style="padding-top: 10px;">Katarina Larson</h5>
                         <span>Dancer</span>
                         <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#katrinabio">
                           View Bio
@@ -453,7 +453,7 @@
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="katrinabioLabel">Meet Katrina Larson</h1>
+                            <h1 class="modal-title fs-5" id="katrinabioLabel">Meet Katarina Larson</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body">
