--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -237,7 +237,7 @@
                     </div>
                     <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/team/carlahanson.jpg" style="border-radius: 50%; width: 150px;">
-                        <h5 style="padding-top: 10px;">Carla Hanson</h5>
+                        <h5 style="padding-top: 10px;">Carla Thelen Hanson</h5>
                         <span>Soprano</span>
                         <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#carlabio">
                           View Bio
@@ -248,7 +248,7 @@
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="carlabioLabel">Meet Belle Toh</h1>
+                            <h1 class="modal-title fs-5" id="carlabioLabel">Meet Carla Thelen Hanson</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body">
